docker compose frontend chages added env injection at build stage in frontend compose

--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -11,6 +11,21 @@ WORKDIR /app
 
 COPY . .
 
+ARG APP_NAME
+ENV APP_NAME=${APP_NAME}
+ENV HOSTNAME=0.0.0.0
+ENV NODE_ENV=production
+ARG NEXT_PUBLIC_SERVER_URI
+ARG NEXT_PUBLIC_CHATTING_WEBSOCKET_URI
+ARG NEXT_PUBLIC_USER_UI_LINK
+ARG NEXT_PUBLIC_STRIPE_PUBLIC_KEY
+
+
+ENV NEXT_PUBLIC_SERVER_URI=${NEXT_PUBLIC_SERVER_URI}
+ENV NEXT_PUBLIC_CHATTING_WEBSOCKET_URI=${NEXT_PUBLIC_CHATTING_WEBSOCKET_URI}
+ENV NEXT_PUBLIC_USER_UI_LINK=${NEXT_PUBLIC_USER_UI_LINK}
+ENV NEXT_PUBLIC_STRIPE_PUBLIC_KEY=${NEXT_PUBLIC_STRIPE_PUBLIC_KEY}
+
 RUN npx nx build ${APP_NAME}
 
 
