--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,8 @@ jobs:
           password: ${{ secrets.GHCR_PAT }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          driver-opts:network=host
 
       # Build and push the BASE image first
       - name: Build and push eshop-base
