env variable sync changes 1

--- a/apps/auth-service/tsconfig.app.json
+++ b/apps/auth-service/tsconfig.app.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    
+    "noUnusedLocals": false,
     "outDir": "dist",
     "types": [
       "node"
