--- a/.github/workflows/user-ui.yml
+++ b/.github/workflows/user-ui.yml
@@ -1,125 +1,177 @@
-name: Build, Push, and Deploy E-Shop
+name: Build, Push, and Deploy user-ui
+
+
 
 on:
+
   push:
-    branches: [ master1 ]
+
+    branches: [ master ]
+
+
 
 env:
+
   REGISTRY: ghcr.io
+
   IMAGE_OWNER: ${{ github.repository_owner }}
 
+
+
 jobs:
+
   build-and-push:
-    name: Build and Push Images
+
+    name: Build and Push user-ui Image
+
     runs-on: ubuntu-latest
+
     permissions:
+
       contents: read
+
       packages: write
 
+
+
     steps:
+
       - name: Checkout repository
+
         uses: actions/checkout@v4
 
+
+
       - name: Log in to GHCR
+
         uses: docker/login-action@v3
+
         with:
+
           registry: ${{ env.REGISTRY }}
+
           username: ${{ github.actor }}
+
           password: ${{ secrets.GHCR_PAT }}
 
+
+
       - name: Set up Docker Buildx
+
         uses: docker/setup-buildx-action@v3
+
         with:
+
           driver-opts: |
+
             network=host
 
-      # --- Base image ---
+
+
+      # --- Base image (Required for user-ui build) ---
+
       - name: Build and push eshop-base
+
         uses: docker/build-push-action@v5
+
         with:
+
           context: .
+
           file: ./Dockerfile.base
+
           push: true
+
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_OWNER }}/eshop-base:latest
+
           cache-from: type=gha
+
           cache-to: type=gha,mode=max
+
           secrets: |
+
             GIT_AUTH_TOKEN=${{ secrets.GHCR_PAT }}
+
+
 
       # --- Frontend: user-ui ---
+
       - name: Build and push user-ui
+
         uses: docker/build-push-action@v5
+
         with:
+
           context: .
+
           file: ./Dockerfile.frontend
+
           build-args: |
+
             APP_NAME=user-ui
+
             NEXT_PUBLIC_SERVER_URI=${{ vars.NEXT_PUBLIC_SERVER_URI }}
+
             NEXT_PUBLIC_CHATTING_WEBSOCKET_URI=${{ vars.NEXT_PUBLIC_CHATTING_WEBSOCKET_URI }}
+
             NEXT_PUBLIC_STRIPE_PUBLIC_KEY=${{ secrets.NEXT_PUBLIC_STRIPE_PUBLIC_KEY }}
+
             NEXT_PUBLIC_USER_URI=${{ vars.NEXT_PUBLIC_USER_URI }}
+
             NEXT_PUBLIC_SELLER_URI=${{ vars.NEXT_PUBLIC_SELLER_URI }}
+
           push: true
+
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_OWNER }}/eshop-user-ui:latest
+
           cache-from: type=gha
+
           cache-to: type=gha,mode=max
+
           secrets: |
+
             GIT_AUTH_TOKEN=${{ secrets.GHCR_PAT }}
 
-      # --- Frontend: seller-ui ---
-      - name: Build and push seller-ui
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfile.frontend
-          build-args: |
-            APP_NAME=seller-ui
-            NEXT_PUBLIC_SERVER_URI=${{ vars.NEXT_PUBLIC_SERVER_URI }}
-            NEXT_PUBLIC_CHATTING_WEBSOCKET_URI=${{ vars.NEXT_PUBLIC_CHATTING_WEBSOCKET_URI }}
-            NEXT_PUBLIC_STRIPE_PUBLIC_KEY=${{ secrets.NEXT_PUBLIC_STRIPE_PUBLIC_KEY }}
-            NEXT_PUBLIC_USER_URI=${{ vars.NEXT_PUBLIC_USER_URI }}
-            NEXT_PUBLIC_SELLER_URI=${{ vars.NEXT_PUBLIC_SELLER_URI }}
-          push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_OWNER }}/eshop-seller-ui:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          secrets: |
-            GIT_AUTH_TOKEN=${{ secrets.GHCR_PAT }}
 
-      # --- Backend services ---
-      - name: Build and push backend services
-        run: |
-          docker login ${{ env.REGISTRY }} -u ${{ github.actor }} -p ${{ secrets.GHCR_PAT }}
-          SERVICES="api-gateway auth-service product-service order-service chatting-service kafka-service"
-          for SERVICE in $SERVICES; do
-            docker buildx build \
-              --file ./Dockerfile.backend \
-              --build-arg APP_NAME=$SERVICE \
-              --tag ${{ env.REGISTRY }}/${{ env.IMAGE_OWNER }}/eshop-$SERVICE:latest \
-              --cache-from type=gha \
-              --cache-to type=gha,mode=max \
-              --push \
-              .
-          done
 
   deploy:
+
     name: Deploy to VM
+
     needs: build-and-push
+
     runs-on: ubuntu-latest
 
+
+
     steps:
+
       - name: Deploy to VM via SSH
+
         uses: appleboy/ssh-action@master
+
         with:
+
           host: ${{ secrets.VM_HOST }}
+
           username: ${{ secrets.VM_USER }}
+
           key: ${{ secrets.VM_SSH_KEY }}
+
           script: |
+
             cd ~/Eshop
+
             echo ${{ secrets.GHCR_PAT }} | docker login ${{ env.REGISTRY }} -u ${{ github.actor }} --password-stdin
+
             git pull
+
             echo "Creating production .env file from GitHub Secrets..."
+
             echo "${{ secrets.PROD_ENV_FILE }}" > .env
+
             docker compose pull
+
             docker compose up -d
+
             docker image prune -f
