last stable master node

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Build, Push, and Deploy E-Shop
 
 on:
   push:
-    branches: [ master1 ]
+    branches: [ master ]
 
 env:
   REGISTRY: ghcr.io
