--- a/.github/workflows/user-ui.yml
+++ b/.github/workflows/user-ui.yml
@@ -1,177 +1,177 @@
-name: Build, Push, and Deploy user-ui
+# name: Build, Push, and Deploy user-ui
 
 
 
-on:
+# on:
 
-  push:
+#   push:
 
-    branches: [ master ]
+#     branches: [ master ]
 
 
 
-env:
+# env:
 
-  REGISTRY: ghcr.io
+#   REGISTRY: ghcr.io
 
-  IMAGE_OWNER: ${{ github.repository_owner }}
+#   IMAGE_OWNER: ${{ github.repository_owner }}
 
 
 
-jobs:
+# jobs:
 
-  build-and-push:
+#   build-and-push:
 
-    name: Build and Push user-ui Image
+#     name: Build and Push user-ui Image
 
-    runs-on: ubuntu-latest
+#     runs-on: ubuntu-latest
 
-    permissions:
+#     permissions:
 
-      contents: read
+#       contents: read
 
-      packages: write
+#       packages: write
 
 
 
-    steps:
+#     steps:
 
-      - name: Checkout repository
+#       - name: Checkout repository
 
-        uses: actions/checkout@v4
+#         uses: actions/checkout@v4
 
 
 
-      - name: Log in to GHCR
+#       - name: Log in to GHCR
 
-        uses: docker/login-action@v3
+#         uses: docker/login-action@v3
 
-        with:
+#         with:
 
-          registry: ${{ env.REGISTRY }}
+#           registry: ${{ env.REGISTRY }}
 
-          username: ${{ github.actor }}
+#           username: ${{ github.actor }}
 
-          password: ${{ secrets.GHCR_PAT }}
+#           password: ${{ secrets.GHCR_PAT }}
 
 
 
-      - name: Set up Docker Buildx
+#       - name: Set up Docker Buildx
 
-        uses: docker/setup-buildx-action@v3
+#         uses: docker/setup-buildx-action@v3
 
-        with:
+#         with:
 
-          driver-opts: |
+#           driver-opts: |
 
-            network=host
+#             network=host
 
 
 
-      # --- Base image (Required for user-ui build) ---
+#       # --- Base image (Required for user-ui build) ---
 
-      - name: Build and push eshop-base
+#       - name: Build and push eshop-base
 
-        uses: docker/build-push-action@v5
+#         uses: docker/build-push-action@v5
 
-        with:
+#         with:
 
-          context: .
+#           context: .
 
-          file: ./Dockerfile.base
+#           file: ./Dockerfile.base
 
-          push: true
+#           push: true
 
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_OWNER }}/eshop-base:latest
+#           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_OWNER }}/eshop-base:latest
 
-          cache-from: type=gha
+#           cache-from: type=gha
 
-          cache-to: type=gha,mode=max
+#           cache-to: type=gha,mode=max
 
-          secrets: |
+#           secrets: |
 
-            GIT_AUTH_TOKEN=${{ secrets.GHCR_PAT }}
+#             GIT_AUTH_TOKEN=${{ secrets.GHCR_PAT }}
 
 
 
-      # --- Frontend: user-ui ---
+#       # --- Frontend: user-ui ---
 
-      - name: Build and push user-ui
+#       - name: Build and push user-ui
 
-        uses: docker/build-push-action@v5
+#         uses: docker/build-push-action@v5
 
-        with:
+#         with:
 
-          context: .
+#           context: .
 
-          file: ./Dockerfile.frontend
+#           file: ./Dockerfile.frontend
 
-          build-args: |
+#           build-args: |
 
-            APP_NAME=user-ui
+#             APP_NAME=user-ui
 
-            NEXT_PUBLIC_SERVER_URI=${{ vars.NEXT_PUBLIC_SERVER_URI }}
+#             NEXT_PUBLIC_SERVER_URI=${{ vars.NEXT_PUBLIC_SERVER_URI }}
 
-            NEXT_PUBLIC_CHATTING_WEBSOCKET_URI=${{ vars.NEXT_PUBLIC_CHATTING_WEBSOCKET_URI }}
+#             NEXT_PUBLIC_CHATTING_WEBSOCKET_URI=${{ vars.NEXT_PUBLIC_CHATTING_WEBSOCKET_URI }}
 
-            NEXT_PUBLIC_STRIPE_PUBLIC_KEY=${{ secrets.NEXT_PUBLIC_STRIPE_PUBLIC_KEY }}
+#             NEXT_PUBLIC_STRIPE_PUBLIC_KEY=${{ secrets.NEXT_PUBLIC_STRIPE_PUBLIC_KEY }}
 
-            NEXT_PUBLIC_USER_URI=${{ vars.NEXT_PUBLIC_USER_URI }}
+#             NEXT_PUBLIC_USER_URI=${{ vars.NEXT_PUBLIC_USER_URI }}
 
-            NEXT_PUBLIC_SELLER_URI=${{ vars.NEXT_PUBLIC_SELLER_URI }}
+#             NEXT_PUBLIC_SELLER_URI=${{ vars.NEXT_PUBLIC_SELLER_URI }}
 
-          push: true
+#           push: true
 
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_OWNER }}/eshop-user-ui:latest
+#           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_OWNER }}/eshop-user-ui:latest
 
-          cache-from: type=gha
+#           cache-from: type=gha
 
-          cache-to: type=gha,mode=max
+#           cache-to: type=gha,mode=max
 
-          secrets: |
+#           secrets: |
 
-            GIT_AUTH_TOKEN=${{ secrets.GHCR_PAT }}
+#             GIT_AUTH_TOKEN=${{ secrets.GHCR_PAT }}
 
 
 
-  deploy:
+#   deploy:
 
-    name: Deploy to VM
+#     name: Deploy to VM
 
-    needs: build-and-push
+#     needs: build-and-push
 
-    runs-on: ubuntu-latest
+#     runs-on: ubuntu-latest
 
 
 
-    steps:
+#     steps:
 
-      - name: Deploy to VM via SSH
+#       - name: Deploy to VM via SSH
 
-        uses: appleboy/ssh-action@master
+#         uses: appleboy/ssh-action@master
 
-        with:
+#         with:
 
-          host: ${{ secrets.VM_HOST }}
+#           host: ${{ secrets.VM_HOST }}
 
-          username: ${{ secrets.VM_USER }}
+#           username: ${{ secrets.VM_USER }}
 
-          key: ${{ secrets.VM_SSH_KEY }}
+#           key: ${{ secrets.VM_SSH_KEY }}
 
-          script: |
+#           script: |
 
-            cd ~/Eshop
+#             cd ~/Eshop
 
-            echo ${{ secrets.GHCR_PAT }} | docker login ${{ env.REGISTRY }} -u ${{ github.actor }} --password-stdin
+#             echo ${{ secrets.GHCR_PAT }} | docker login ${{ env.REGISTRY }} -u ${{ github.actor }} --password-stdin
 
-            git pull
+#             git pull
 
-            echo "Creating production .env file from GitHub Secrets..."
+#             echo "Creating production .env file from GitHub Secrets..."
 
-            echo "${{ secrets.PROD_ENV_FILE }}" > .env
+#             echo "${{ secrets.PROD_ENV_FILE }}" > .env
 
-            docker compose pull
+#             docker compose pull
 
-            docker compose up -d
+#             docker compose up -d
 
-            docker image prune -f
+#             docker image prune -f
