--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -26,7 +26,7 @@ ENV NEXT_PUBLIC_CHATTING_WEBSOCKET_URI=${NEXT_PUBLIC_CHATTING_WEBSOCKET_URI}
 ENV NEXT_PUBLIC_USER_UI_LINK=${NEXT_PUBLIC_USER_UI_LINK}
 ENV NEXT_PUBLIC_STRIPE_PUBLIC_KEY=${NEXT_PUBLIC_STRIPE_PUBLIC_KEY}
 
-RUN npx nx build ${APP_NAME}
+RUN npx nx build ${APP_NAME} --no-cache
 
 
 # --- Stage 2: Production ---
